src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Can_Leave_Voicemail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Leave Voicemail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communications_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Communications Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>This field is used to save subject type which is further being used in the case .</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group/Employer</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>UHG</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Outbound_Contact_with_New_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Outbound Contact with New Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>EID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <description>Initial contact date for the member being added to the system.  Also used for legacy member that are imported in the system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Member_ID__c</fullName>
        <description>Member ID from legacy system stored on the Contact for data migration.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Legacy Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>NPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Originator__c</fullName>
        <label>Other Originator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
                <value>
                    <fullName>Collection Agency</fullName>
                </value>
                <value>
                    <fullName>Family/Friend/Spouse</fullName>
                </value>
                <value>
                    <fullName>Insurance Carrier</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Prospective Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Representative</fullName>
                </value>
                <value>
                    <fullName>State Regulatory Agent/Government Agency</fullName>
                </value>
                <value>
                    <fullName>UHG Employee</fullName>
                </value>
                <value>
                    <fullName>Interpreter for Member</fullName>
                    <isActive>false</isActive>
                    <label>Interpreter for Member</label>
                </value>
                <value>
                    <fullName>Parent/Guardian/Custody Holder</fullName>
                    <isActive>false</isActive>
                    <label>Parent/Guardian/Custody Holder</label>
                </value>
                <value>
                    <fullName>Personal Representative</fullName>
                    <isActive>false</isActive>
                    <label>Personal Representative</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <description>Member&apos;s preferred contact time.</description>
        <label>Preferred Contact Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Preferred_Method__c</fullName>
        <label>Preferred Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Family Link</fullName>
                    <label>Care Advisor Connect</label>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Other Phone</fullName>
                    <isActive>false</isActive>
                    <label>Other Phone</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>Name individual prefers to be called.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Associations__c</fullName>
        <description>Used if the member is aligned to any specific programs</description>
        <label>Program Associations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Mgmt/Disease Mgmt (CMDM)</fullName>
                </value>
                <value>
                    <fullName>Dx Odyssey</fullName>
                </value>
                <value>
                    <fullName>FamilyLink</fullName>
                </value>
                <value>
                    <fullName>Genomics - NRS case</fullName>
                </value>
                <value>
                    <fullName>Genomics - SNI case</fullName>
                </value>
                <value>
                    <fullName>Neonatal Resource Services (NRS)</fullName>
                </value>
                <value>
                    <fullName>Pediatric Home Services (PHS)</fullName>
                </value>
                <value>
                    <fullName>Phoenix Children&apos;s Care Network (PCCN)</fullName>
                </value>
                <value>
                    <fullName>Picnic Health</fullName>
                </value>
                <value>
                    <fullName>Seattle Children&apos;s Care Network (SCCN)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_To_Member__c</fullName>
        <label>Relationship To Member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Family member’s Relationship in the family.</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child/Other</fullName>
                </value>
                <value>
                    <fullName>Non-Policy Caregiver</fullName>
                </value>
                <value>
                    <fullName>Spouse/Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Subscriber/Recipient</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SNI_FL_Terms_of_use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Using this field to indicate whether the member has logged into the FamilyLink community first time or not.</description>
        <label>Terms of use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRK_KeyChain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SRK KeyChain</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_Member_is_the_Primary_Caregiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates who the primary caregiver of the family is. This person’s name will show up in the Family Overview tab and helps you remember who the family’s main point of contact is.</description>
        <label>This Member is the Primary Caregiver</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Providers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Providers</label>
    </listViews>
    <recordTypes>
        <fullName>ContactLayout</fullName>
        <active>true</active>
        <label>Contact Layout</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>